[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Movement/left.png" type="Texture" id=1]
[ext_resource path="res://Assets/Movement/right.png" type="Texture" id=2]
[ext_resource path="res://Scripts/HUD/HUD.gd" type="Script" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="."]
anchor_left = 0.045
anchor_top = 0.429
anchor_right = 0.181
anchor_bottom = 0.542
margin_left = -0.0483856
margin_top = -0.219238
margin_right = -0.312393
margin_bottom = -0.0192566
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Left"]
position = Vector2( 39.1789, 16.8577 )
scale = Vector2( 0.158879, 0.0698994 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="Right" type="Button" parent="."]
anchor_left = 0.819
anchor_top = 0.437
anchor_right = 0.955
anchor_bottom = 0.542
margin_left = 0.229919
margin_top = -0.299866
margin_right = -0.0340576
margin_bottom = 4.7001
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Right"]
position = Vector2( 40.5947, 19.2174 )
scale = Vector2( 0.16441, 0.0791169 )
z_as_relative = false
texture = ExtResource( 2 )

[connection signal="button_down" from="Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
